--- a/supervisord.conf
+++ b/supervisord.conf
@@ -29,7 +29,7 @@ directory=%(here)s
 
 ; https://www.uvicorn.org/deployment/
 [fcgi-program:api]
-socket=tcp://localhost:8000
+socket=tcp://0.0.0.0:8000
 command=.venv/bin/uvicorn --fd 0 blogme.main:app
 numprocs=4
 process_name=%(process_num)d
