--- a/supervisord.conf
+++ b/supervisord.conf
@@ -24,13 +24,12 @@ nodaemon=false               ; start in foreground if true; default false
 ;minfds=60000                 ; min. avail startup file descriptors; default 1024
 minprocs=200                 ; min. avail process descriptors;default 200
 ;user=nobody                  ; default is current user, required if root
-environment=PATH="%(here)s/.venv/bin:%(ENV_PATH)s"
 directory=%(here)s
 
 ; https://www.uvicorn.org/deployment/
 [fcgi-program:api]
 socket=tcp://0.0.0.0:8000
-command=.venv/bin/uvicorn --fd 0 blogme.main:app
+command=uvicorn --fd 0 blogme.main:app
 numprocs=4
 process_name=%(process_num)d
 autostart=true
